added download code in main file

--- a/main.ipynb
+++ b/main.ipynb
@@ -24,6 +24,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from download_data import download_files\n",
+    "# download_files()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
